[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/fontes/pixelart.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/scripts/GUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_top = 0.906
anchor_right = 1.0
anchor_bottom = 0.994
margin_top = 0.0739899
margin_bottom = 0.026001
color = Color( 0.105882, 0.105882, 0.321569, 1 )

[node name="Label4" type="Label" parent="ColorRect"]
anchor_left = 0.033
anchor_top = -0.667
anchor_right = 0.174
anchor_bottom = -0.2
margin_left = -0.0319996
margin_top = 0.00500107
margin_right = 0.103996
custom_fonts/font = SubResource( 1 )
text = "level  : 0 "

[node name="Label5" type="Label" parent="ColorRect"]
anchor_left = 0.033
anchor_top = 0.267
anchor_right = 0.191
anchor_bottom = 0.733
margin_left = -0.0319996
margin_top = -0.00500011
margin_right = -0.064003
margin_bottom = 0.00499916
custom_fonts/font = SubResource( 1 )
text = "exp     0     : 0"

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="GridContainer"]
margin_right = 40.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "wave:   0"

[node name="Label2" type="Label" parent="GridContainer"]
margin_top = 11.0
margin_right = 40.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "life:   5"

[node name="Label3" type="Label" parent="GridContainer"]
margin_top = 22.0
margin_right = 40.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "kills  : 0"
